# mojo-automation-kit

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml
.github/: FUNDING.yml
development/: setup-environment
repository-setup/: rehome-repository  repository-config.ini
source/sphinx/: userguide
source/sphinx/source/: conf.py
source/testroots/testplus/: README.md
userguide/: 00-00-repository-branding.rst  01-00-overview.rst  02-00-getting-started.rst  03-00-automation-configuration.rst  03-01-landscape-file.rst  03-02-topology-file.rst  03-03-runtime-file.rst  03-04-credentials-file.rst  03-05-user-file.rst  04-00-testrun-sequencing.rst  04-01-integration-couplings.rst  04-02-scope-couplings.rst  05-00-functional-description.rst  05-01-activation-and-startup.rst  05-02-inter-operability.rst  05-03-ssh-coordinator-and-agent.rst  05-04-upnp-coordinator-and-agent.rst  06-00-workflow-orchestration.rst  07-00-enterprise-extensibility.rst  08-00-command-line.rst  09-00-code-organization-and-conventions.rst  10-00-coding-standards.rst  11-00-documentation-build.rst  12-00-continuous-integration.rst  userguide.rst
userguide/examples/: landscape.yaml
workspaces/: default-workspace.code-workspace  default-workspace.template
