[tool.poetry]
name = "<package name>"
description = "<package description>"
version = "2.0."
authors = []
readme = "README.rst"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyyaml = ">6.0.1"
mojo-errors = ">=2.0.1 <2.1.0"
mojo-collections = ">=2.0.22 <2.1.0"
mojo-startup = ">=2.0.5 <2.1.0"
mojo-extension = ">=2.0.4 <2.1.0"
mojo-config = ">=2.0.2 <2.1.0"
mojo-xmodules = ">=2.0.0 <2.1.0"
mojo-runtime = ">=2.0.0 <2.1.0"
mojo-interfaces = ">=2.0.0 <2.1.0"
mojo-credentials = ">=2.0.0 <2.1.0"
mojo-dataprofiles = ">=2.0.0 <2.1.0"
mojo-testplus = ">=2.0.2 <2.1.0"
mojo-results = ">=2.0.1 <2.1.0"
mojo-networking = ">=2.0.0 <2.1.0"
mojo-landscaping = ">=2.0.0 <2.1.0"
mojo-interop = ">=2.0.1 <2.1.0"

[tool.poetry.group.dev.dependencies]
myst-parser = "^0.18.1"
sphinx = ">=1.6,<6"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
